--- a/googleOSD/googleOSD/googleOSD/GCalender.xaml
+++ b/googleOSD/googleOSD/googleOSD/GCalender.xaml
@@ -4,10 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GoogleOSD"
-		xmlns:igWPF="http://schemas.infragistics.com/xaml/wpf"
 		mc:Ignorable="d"
         WindowStartupLocation="CenterScreen" 
-        Title="スケジュール管理" Height="1000" Width="1700" Padding="10"
+        Title="スケジュール管理" Height="960" Width="1800" Padding="10"
 		SizeChanged="MetroWindow_SizeChanged" ScrollViewer.HorizontalScrollBarVisibility="Auto" 
 		ScrollViewer.VerticalScrollBarVisibility="Auto" Closed="Window_Closed">
 
@@ -19,15 +18,32 @@
 			<ColumnDefinition  Width="Auto" />
 			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
-		<Grid.RowDefinitions >
-			<RowDefinition Height="Auto"/>
-			<RowDefinition Height="Auto"/>
-		</Grid.RowDefinitions>
 
-		<igWPF:XamDataGrid    Grid.Row="0" Grid.Column="0" Grid.RowSpan="2"  Width="200" 
-					 x:Name="Ariadne_dg"/>
+		<StackPanel  Grid.Row="0" Grid.Column="0"   Grid.RowSpan="2"   x:Name="info_sp">
+		<Label Content="添付するファイルにチェックを入れて下さい"/>
+			<TreeView Width="300"  x:Name="Ariadne_tv" MinHeight="500">
+				<TreeView.ItemTemplate>
+					<HierarchicalDataTemplate DataType="local:ariadneDatas" ItemsSource="{Binding OrderNumber}">
+						<TextBlock Text="{Binding ManagementNumber}" />
+					</HierarchicalDataTemplate>
+				</TreeView.ItemTemplate>
+			</TreeView>
+			<DataGrid  Width="300"  VerticalAlignment="Bottom"  AutoGenerateColumns="False" HorizontalContentAlignment="Right"
+					 x:Name="Ariadne_dg">
+				<DataGrid.Columns>
+					<DataGridTextColumn Header="その他のファイル"   Binding="{Binding OFilePCPass}">
+						<DataGridTextColumn.CellStyle>
+							<Style TargetType="DataGridCell">
+								<Setter Property="HorizontalContentAlignment"  Value="Right" />
+							</Style>
+						</DataGridTextColumn.CellStyle>
+					</DataGridTextColumn>
+					<DataGridTextColumn Header="GoogleDriveのFileID"   Binding="{Binding OFileGoogleFileID}" />
+				</DataGrid.Columns>
+			</DataGrid>
+		</StackPanel>
 
-		<StackPanel  Grid.Row="0" Grid.Column="1"   Orientation="Horizontal" Width="1400">
+		<StackPanel  Grid.Row="0" Grid.Column="1"   Orientation="Horizontal"   x:Name="CControl_sp">
 			<Button x:Name="Back_bt" Content="▲" HorizontalAlignment="Left" Margin="20,21,0,0" VerticalAlignment="Top" Width="29" RenderTransformOrigin="0.387,0.485" Click="Back_bt_Click"/>
 			<ComboBox x:Name="cbYearMonth" HorizontalAlignment="Left" Margin="20,20,0,0" VerticalAlignment="Top" Width="139" SelectionChanged="cbYearMonth_SelectionChanged" FontSize="18"/>
 			<Button x:Name="Next_bt" Content="▼" HorizontalAlignment="Left" Margin="20,21,0,0" VerticalAlignment="Top" Width="29" RenderTransformOrigin="0.387,0.485" Click="Next_bt_Click"/>
@@ -43,7 +59,8 @@
 			<Button HorizontalAlignment="Left" Margin="10,19,0,0" VerticalAlignment="Top" Width="33" RenderTransformOrigin="0.485,-0.162" AutomationProperties.HelpText="作成中"
 						Name="Dayly_bt" Content="日" Click="Dayly_bt_Click" />
 		</StackPanel>
-		<Grid    Grid.Row="1" Grid.Column="1" x:Name="CalendarContainer"  Margin="0,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" />
+
+		<Grid Grid.Row="1" Grid.Column="1" x:Name="CalendarContainer"  Margin="0,60,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" />
 
 	</Grid>
 </Window>
